# JSCLite

./: CMakeLists.txt  DerivedSources.make  Makefile  README.md  jscore.bkl  make-generated-sources.sh
API/: JSBase.cpp  JSBase.h  JSContextRef.h  JSObjectRef.h  JSStringRef.cpp  JSStringRef.h  JSStringRefCF.cpp  JSStringRefCF.h  JSValueRef.h
kjs/: Context.cpp  ExecState.h  JSImmediate.h  JSLock.cpp  Parser.cpp  collector.cpp  config.h  date_object.cpp  date_object.h  dtoa.cpp  fpconst.cpp  grammar.y  interpreter.cpp  lexer.cpp  lexer.h  nodes.cpp  testkjs.cpp  ustring.cpp
pcre/: pcre_compile.c
scripts/: android-prepackage-libs.sh  android-test-driver.sh  prepackage-includes.sh
tests/android/native-shell/: README.md
tests/android/native-shell/app/: build.gradle
tests/android/native-shell/app/src/main/: AndroidManifest.xml
tests/android/native-shell/app/src/main/cpp/: CMakeLists.txt  main.c
tests/android/native-shell/app/src/main/java/com/example/nativeshell/: NativeApp.java
tests/android/native-shell/app/src/main/res/values/: strings.xml  styles.xml
tests/mozilla/: jsDriver.pl
tests/mozilla/ecma/: shell.js
toolchains/: Android-arm.cmake  android.cmake
wtf/: Assertions.cpp  FastMalloc.cpp  FastMalloc.h  Platform.h  RefPtr.h  TCSpinLock.h
wtf/unicode/: Unicode.h
wtf/unicode/libc/: UnicodeLibC.h
